--- a/server/package.json
+++ b/server/package.json
@@ -20,7 +20,8 @@
     "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.3.0",
-    "mongoose": "^8.1.3"
+    "mongoose": "^8.1.3",
+    "xss": "^1.0.14"
   },
   "devDependencies": {
     "nodemon": "^3.0.3"
